--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,11 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.google.android.things.contrib:driver-button:0.3'
     compile 'com.google.android.gms:play-services-vision:11.0.4'
     compile 'com.google.android.things.contrib:driver-rainbowhat:0.4'
     provided 'com.google.android.things:androidthings:0.5.1-devpreview'
 }
+
+apply plugin: 'com.google.gms.google-services'
